fix the blog page container gap

--- a/themes/ESGI-theme/src/css/components/_blog-page.scss
+++ b/themes/ESGI-theme/src/css/components/_blog-page.scss
@@ -13,7 +13,7 @@
     padding: 0 calc(var(--bs-gutter-x) * 0.5);
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+
   }
 
   h1 {
@@ -21,8 +21,8 @@
     font-family: fonts.$font2;
     font-size: 4.5rem;
     font-weight: 500;
-    margin-top: 30px;
-    margin-bottom: 50px;
+    margin-top: 40px;
+    margin-bottom: 90px;
     text-align: left;
     letter-spacing: -0.02em;
     line-height: 1.2;
@@ -32,6 +32,7 @@
 
   // main content area
   .blog-content {
+
     flex: 1;
     min-width: 0;
 
@@ -77,7 +78,7 @@
         }
 
         .post-content {
-          padding: 25px 20px 25px 0;
+          padding: 25px 0 25px 0;
 
           h2 {
             margin: 0 0 15px 0;
@@ -380,7 +381,7 @@
           }
 
           .post-content {
-            padding: 20px 15px 20px 0;
+            padding: 20px 0 20px 0;
 
             h2 {
               font-size: 1.2rem;
@@ -504,7 +505,7 @@
           }
 
           .post-content {
-            padding: 15px 12px 15px 0;
+            padding: 15px 0 15px 0;
 
             h2 {
               font-size: 1.1rem;
