--- a/themes/ESGI-theme/src/css/components/_post-sidebar.scss
+++ b/themes/ESGI-theme/src/css/components/_post-sidebar.scss
@@ -26,7 +26,7 @@
                 position: relative;
 
                 input[type="search"] {
-                    width: 100%;
+                    width: 90%;
                     padding: 12px 30px 12px 0;
                     border: none;
                     border-bottom: 1px solid var(--border-color);
@@ -46,7 +46,7 @@
 
                 button {
                     position: absolute;
-                    right: 0;
+                    right: 50px;
                     top: 50%;
                     transform: translateY(-50%);
                     background: transparent;
@@ -311,7 +311,7 @@
                     position: relative;
 
                     input[type="search"] {
-                        width: 100%;
+                        width: 90%;
                         padding: 12px 30px 12px 0;
                         border: none;
                         border-bottom: 1px solid var(--border-color);
